--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
 		<div class="home_menu">
 			<div id="home">Home</div>
 			<div id="trabalhos">Trabalhos</div>
+			<div id="dc">Diciplinas Cursadas</div>
+			<div id="interesse">Interesse</div>
 			<div id="info">Info</div>
 		</div>
 	</div>
 
 	<div class="conteudo">
-		<p>Home</p>
+		<div id="conteudo">
+			<p>Home</p>
+		</div>
 	</div>
 
 </div>
