--- a/pages/info.html
+++ b/pages/info.html
@@ -1,5 +1,5 @@
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<div>
+<div class="texto">
 	<p>Gustavo Henrique Knob</p>
 	<p>ghk18@hotmail.com</p>
 	<p>Diciplina de Programação II</p>
