correcao do bug de acentuacao

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <script src="js/jquery.js" type="text/javascript"></script>
 <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="default">
-<script src="js/script.js" type="text/javascript" charset="8859-1"></script>
+<script src="js/script.js" type="text/javascript" charset="ISO-8859-1"></script>
 <title>t0</title>
 
 </head>
