--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script src="js/jquery.js" type="text/javascript"></script>
 <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="default">
 <script src="js/script.js" type="text/javascript" charset="ISO-8859-1"></script>
-<title>t0</title>
+<title>Trabalho t0</title>
 
 </head>
 <body>
